# ded-txt

./: .eslintrc.js  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  FUTURE.md  PRIVACY.md  README.md  capacitor.config.json  launch.patch.aa  launch.patch.ab  line-numbers.js  main.js  manifest.webmanifest  notice.js  package-lock.json  package.json  robots.txt  sitemap.xml  sw.js  version.js  version.json
.claude/: CLAUDE.md  settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
.well-known/: security.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/: index.html
landing/: index.html  script.js
platform/: index.js  tauri.js
scripts/: build-android.js  build-icons.js  build-social-preview.js  build-web.js
src/: drafts.js  find.js  index.html  line-numbers.js  llms.txt  manifest.webmanifest  notice.js  pwa-install.js  renderer.js  scroll-arrows.js  styles.css  sw-update.js  sw.js  theme-init.js  update.js  version.js  welcome.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/platform/: capacitor.js  index.js  tauri.js  web.js
test/: build-web.test.js  css-parity.test.js  drafts.test.js  find.test.js  line-numbers.test.js  notice.test.js  platform-detect.test.js  pwa-install.test.js  scroll-arrows.test.js  sw-shell.test.js  sw-update.test.js  update.test.js  web-platform.test.js  welcome.test.js
(+2 files in other folders)
