[package]
name = "dedtxt"
version = "1.0.0-rc.54"
description = "DedTxt — a dead simple plain-text editor."
authors = ["Chris Portka"]
edition = "2021"

# Tauri 2 convention: the binary's main() simply calls into a library crate
# so the same code can be reused for mobile targets later if needed.
[lib]
name = "dedtxt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
